...
                  mainAxisAlignment: MainAxisAlignment.spaceBetween,
                  children: [
                    Column(
                      mainAxisAlignment: MainAxisAlignment.center,
                      crossAxisAlignment: CrossAxisAlignment.start,
                      children: [
                        Text("Sample Account", style: titleTextStyle),
                        const SizedBox(height: 10),
                        Text("This is your bio.", style: releaseDateTextStyle),
                      ],
                    ),
                    const Icon(
                      Icons.account_box_rounded,
...
