...
            child: TextFormField(
              style: appbarSearchTextStyle,
              controller: searchCtrl,
              keyboardType: TextInputType.text,
              inputFormatters: [LengthLimitingTextInputFormatter(30)],
              decoration: InputDecoration.collapsed(
                  hintText: 'Cari', hintStyle: appbarSearchTextStyle),
            ),
          ),
          function: () async {
            setState(() {
              currentIndex = 1;
            });
...
